c4prj2_input/grade.txt
Grading at Sun Aug  2 15:09:07 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘read_input’:
input.c:49:15: error: format ‘%u’ expects argument of type ‘unsigned int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Werror=format=]
        printf("%ul",index);
               ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
